# FastSignals

./: CMakeLists.txt
cmake/: functions.cmake
libfastsignals/: CMakeLists.txt
libfastsignals/include/: function_detail.h  signal.h
libfastsignals/include/libfastsignals/: bind_weak.h  combiners.h  connection.h  function.h  function_detail.h  signal.h  signal_impl.h  spin_mutex.h  type_traits.h
libfastsignals/src/: connection.cpp  function_detail.cpp  signal_impl.cpp
tests/: CMakeLists.txt
tests/catch2/: CMakeLists.txt
tests/libfastsignals_stress_tests/: signal_stress_tests.cpp
tests/libfastsignals_unit_tests/: Function_tests.cpp  bind_weak_tests.cpp  signal_tests.cpp
